--- a/filepicker/src/main/res/layout/vw_layout_top_bar.xml
+++ b/filepicker/src/main/res/layout/vw_layout_top_bar.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="56dp"
     android:background="@color/vw_BgToolBar">
 
     <RelativeLayout
         android:id="@+id/rl_back"
         android:layout_width="50dp"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
         android:onClick="onBackClick">
 
         <ImageView
@@ -16,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:rotation="180"
             android:src="@drawable/vw_ic_back" />
     </RelativeLayout>
 
@@ -26,6 +28,7 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/rl_back"
         android:textColor="@android:color/white"
+        android:layout_toEndOf="@id/rl_back"
         android:textSize="20sp"
         tools:text="0/9" />
 
@@ -63,7 +66,7 @@
         android:id="@+id/rl_done"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
